# ib-practica11-oop-cmake-SergioPerera

Class_modification/src/: tools.cc  tools.h
Class_modification_Buena/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Class_modification_Buena/src/: main_rationals.cc  tools.h
Complex/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Complex/src/: basurilla  classes_complex.h  classes_functions_complex.h  compiled_complex  complex.cc  functions_complex.h  main_complex  main_complex.cc  makefile  tools.cc  tools.h
Dates/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Dates/src/: compiled_dates  dates.cc  dates.h  functions_dates.cc  main_dates  main_dates.cc  makefile  necesario  tools.cc  tools.h
Rational/: CMakeCache.txt  Makefile  cmake_install.cmake
Rational/src/: archive_to_read.txt  basurilla  basurilla.cc  compiled_rationals  lalala.txt  main_rationals  main_rationals.cc  makefile  tools.cc  tools.h  write.txt
